[package]
name = "backend"
version = "0.1.0"
authors = ["John Idogun <sirneij@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4"
config = { version = "0.13", features = ["yaml"] }
deadpool-redis = "0.11"
dotenv = "0.15"
serde = "1"
sqlx = { version = "0.6", features = [
    "runtime-actix-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
