[package]
name = "backend"
version = "0.1.0"
authors = ["John Idogun <sirneij@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-multipart = "0.6"
actix-session = { version = "0.7", features = [
    "redis-rs-session",
    "redis-rs-tls-session",
] }
actix-web = "4"
argon2 = "0.5"
aws-config = "0.55"
aws-sdk-s3 = "0.26"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["yaml"] }
deadpool-redis = "0.11"
dotenv = "0.15"
hex = "0.4"
lettre = { version = "0.10", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "0.32", features = ["source"] }
once_cell = "1.17"
pasetors = "0.6"
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
fake = "2.6"
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
